# wildbox

./: .coverage  .cspell.json  .dockerignore  .env.example  .env.template  .gitignore  .markdown-link-check.json  .markdownlint.json  .pre-commit-config.yaml  .secrets.baseline  API_AUDIT_REPORT.md  ARCHITECTURE.md  ARCHITECTURE_CONSOLIDATION_PLAN.md  AUDIT_COMPLETION_REPORT.md  AUDIT_REMEDIATION_REPORT.md  AUTHENTICATION_FIXES_COMPLETE.md  BLUEPRINT.md  BLUEPRINT_VERIFICATION.md  CHANGELOG.md  CI_SECRETS_SETUP.md  CODE_OF_CONDUCT.md  CODE_QUALITY_REMEDIATION_REPORT.md  CONTRIBUTING.md  COVERAGE_ANALYSIS_REPORT.md  CRITICAL_SECURITY_REMEDIATION.md  CURRENT_STATUS.md  DASHBOARD_REAL_DATA_INTEGRATION.md  DATA_SERVICE_API_DOCUMENTATION.md  DATA_SERVICE_QUICK_REFERENCE.md  DEPLOYMENT.md  DOCUMENTATION_QUALITY_COMPLETION_REPORT.md  DOCUMENTATION_REFACTORING_PLAN.md  GATEWAY_AUDIT_REPORT.md  GITHUB_SECRETS_READY.md  GUARDIAN_API_ENDPOINTS.md  GUARDIAN_ENDPOINTS_SUMMARY.txt  GUARDIAN_EXPLORATION_INDEX.md  GUARDIAN_QUICK_REFERENCE.md  IMPLEMENTATION_STATUS_ANALYSIS.md  IMPROVEMENT_SUMMARY.md  (+106 more)
.githooks/: README.md  pre-commit
.github/: BRANCH_PROTECTION_SETUP.md  FUNDING.yml  copilot-instructions.md  dependabot.yml
docs/: ARCHITECTURE_DECISIONS.md  ARCHITECTURE_STACK_JUSTIFICATION.md  CNAME  DATA_SERVICE_API_DOCUMENTATION.md  DATA_SERVICE_QUICK_REFERENCE.md  (+29 more)
open-security-shared/: README.md  __init__.py  auth_utils.py  circuit_breaker.py  cqrs.py  event_sourcing.py  feature_flags.py  gateway_auth.py  idempotency.py  pyproject.toml  security_middleware.py  tenancy.py  tracing.py
(+1287 files in other folders)
